--- a/app/src/main/res/layout/novelties.xml
+++ b/app/src/main/res/layout/novelties.xml
@@ -1,6 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+<androidx.cardview.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_height="@dimen/recycler_view_height"
+        android:layout_width="match_parent"
+        android:layout_margin="@dimen/common_margin"
+        app:cardElevation="4dp"
+        >
 
-</RelativeLayout>
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+
+        <ImageView
+                android:id="@+id/novelty_item_icon"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true"
+                tools:src="@tools:sample/avatars"
+                android:layout_alignParentLeft="true"
+                />
+
+        <TextView
+                android:id="@+id/novelty_item_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:lines="2"
+                tools:src="@tools:sample/cities"
+                android:layout_alignParentTop="true"
+                android:layout_toEndOf="@id/novelty_item_icon"
+                android:layout_toRightOf="@id/novelty_item_icon"
+                />
+
+        <TextView
+                android:id="@+id/novelty_item_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:src="@tools:sample/cities"
+                android:layout_below="@id/novelty_item_name"
+                />
+
+        <TextView
+                android:id="@+id/novelty_item_gotoshop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:src="@tools:sample/cities"
+                android:layout_below="@id/novelty_item_price"
+                />
+        <TextView
+                android:id="@+id/novelty_item_novelty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+    </RelativeLayout>
+</androidx.cardview.widget.CardView>
