--- a/app/src/main/res/layout/novelty_fragment.xml
+++ b/app/src/main/res/layout/novelty_fragment.xml
@@ -12,4 +12,12 @@
             android:layout_height="match_parent"
             tools:listItem="@layout/novelty"
             />
+
+    <TextView
+            android:id="@+id/novelty_error"
+            android:text="@string/novelty_error_no_date"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            />
 </LinearLayout>
