--- a/app/src/main/res/layout/web_item.xml
+++ b/app/src/main/res/layout/web_item.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
         >
 
-        <WebView
-                android:id="@+id/web_item_webview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
+    <WebView
+            android:id="@+id/web_item_webview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
 
     <TextView
             android:id="@+id/web_item_error"
@@ -17,4 +17,4 @@
             android:layout_height="match_parent"
             />
 
-</FrameLayout>
+</LinearLayout>
