Database fixes and layout refactoring

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="novelty_recycler_height">300dp</dimen>
     <dimen name="novelty_recycler_width">180dp</dimen>
     <dimen name="common_padding">8dp</dimen>
+    <dimen name="card_corner_radius">4dp</dimen>
 </resources>
