--- a/app/src/main/res/layout/novelties.xml
+++ b/app/src/main/res/layout/novelties.xml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_height="@dimen/novelty_recycler_height"
-        android:layout_width="@dimen/novelty_recycler_width"
+        card_view:cardCornerRadius="@dimen/card_corner_radius"
+        card_view:cardElevation="2dp"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:background="@drawable/border_item_background"
         android:layout_margin="@dimen/common_margin"
         app:cardElevation="4dp"
         >
 
-    <RelativeLayout
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/border_item_background"
+            android:orientation="vertical"
             >
 
         <ImageView
                 android:id="@+id/novelty_item_icon"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true"
+                android:layout_height="0dp"
                 android:layout_margin="@dimen/common_margin"
+                android:layout_weight="8"
                 tools:src="@tools:sample/avatars"
-                android:layout_alignParentLeft="true"
                 />
 
         <TextView
@@ -32,41 +35,21 @@
                 android:layout_height="wrap_content"
                 android:padding="@dimen/common_padding"
                 android:textAlignment="center"
-                android:lines="2"
-                android:layout_below="@id/novelty_item_icon"
+                android:maxLines="2"
+                android:layout_weight="1"
                 tools:src="@tools:sample/full_names"
                 />
 
         <TextView
                 android:id="@+id/novelty_item_price"
                 android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:background="@drawable/price_border"
+                android:fontFamily="@font/avant_garde"
                 android:padding="@dimen/common_padding"
                 android:textAlignment="textEnd"
                 tools:src="@tools:sample/cities"
-                android:layout_below="@id/novelty_item_name"
                 />
 
-        <TextView
-                android:id="@+id/novelty_item_gotoshop"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/common_padding"
-                tools:src="@tools:sample/cities"
-                android:visibility="gone"
-                android:layout_below="@id/novelty_item_price"
-                />
-
-        <TextView
-                android:id="@+id/novelty_item_novelty"
-                android:layout_alignTop="@id/novelty_item_icon"
-                android:layout_margin="@dimen/common_margin"
-                tools:text="Новинка!"
-                android:visibility="gone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
-
-    </RelativeLayout>
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
