--- a/app/src/main/res/layout/novelties.xml
+++ b/app/src/main/res/layout/novelties.xml
@@ -5,12 +5,11 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         card_view:cardCornerRadius="@dimen/card_corner_radius"
-        card_view:cardElevation="2dp"
+        app:cardElevation="4dp"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:background="@drawable/border_item_background"
         android:layout_margin="@dimen/common_margin"
-        app:cardElevation="4dp"
         >
 
     <LinearLayout
@@ -25,7 +24,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_margin="@dimen/common_margin"
-                android:layout_weight="8"
+                android:layout_weight="9"
+                android:scaleType="centerCrop"
+                android:cropToPadding="true"
                 tools:src="@tools:sample/avatars"
                 />
 
@@ -35,6 +36,7 @@
                 android:layout_height="wrap_content"
                 android:padding="@dimen/common_padding"
                 android:textAlignment="center"
+                android:textSize="@dimen/items_name_text_size"
                 android:maxLines="2"
                 android:layout_weight="1"
                 tools:src="@tools:sample/full_names"
@@ -45,9 +47,10 @@
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:background="@drawable/price_border"
+                android:textSize="@dimen/item_price_text_size"
                 android:fontFamily="@font/avant_garde"
                 android:padding="@dimen/common_padding"
-                android:textAlignment="textEnd"
+                android:textAlignment="center"
                 tools:src="@tools:sample/cities"
                 />
 
