--- a/app/src/main/res/drawable/price_border.xml
+++ b/app/src/main/res/drawable/price_border.xml
@@ -4,6 +4,7 @@
         >
     <corners android:topRightRadius="4dp"
              android:bottomLeftRadius="4dp"
+             android:bottomRightRadius="4dp"
             />
     <solid android:color="@color/colorAccent"/>
 </shape>
