--- a/app/src/main/res/layout/catalog_fragment.xml
+++ b/app/src/main/res/layout/catalog_fragment.xml
@@ -3,7 +3,12 @@
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
+             android:fitsSystemWindows="true"
         >
+
+    <include layout="@layout/small_toolbar"
+            android:id="@+id/catalog_toolbar"
+            />
 
     <TextView
             android:id="@+id/catalog_error"
@@ -12,6 +17,7 @@
             android:layout_height="match_parent"
             android:visibility="gone"
             />
+
     <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
