--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -6,6 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         >
 
     <FrameLayout
@@ -20,6 +21,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:fitsSystemWindows="true"
+            app:menu="@menu/main_navigation_menu"
             />
 
 </androidx.drawerlayout.widget.DrawerLayout>
