drawer with background

--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -22,6 +22,7 @@
             android:layout_gravity="start"
             android:fitsSystemWindows="true"
             app:menu="@menu/main_navigation_menu"
+            app:headerLayout="@layout/navigation_header_layout"
             />
 
 </androidx.drawerlayout.widget.DrawerLayout>
