toolbar present but nav menu open on home button does not work

--- a/app/src/main/res/layout/novelty_fragment.xml
+++ b/app/src/main/res/layout/novelty_fragment.xml
@@ -5,6 +5,11 @@
              android:layout_height="match_parent"
         >
 
+    <include
+            layout="@layout/small_toolbar"
+            android:id="@+id/novelty_toolbar"
+            />
+
     <TextView
             android:id="@+id/novelty_error"
             android:text="@string/novelty_error_no_date"
