--- a/app/src/main/res/layout/novelty_fragment.xml
+++ b/app/src/main/res/layout/novelty_fragment.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:orientation="vertical"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
         >
 
     <include
@@ -12,6 +12,7 @@
 
     <TextView
             android:id="@+id/novelty_error"
+            android:layout_below="@id/novelty_toolbar"
             android:text="@string/novelty_error_no_date"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -20,10 +21,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
             xmlns:tools="http://schemas.android.com/tools"
+            android:layout_below="@id/novelty_toolbar"
             android:id="@+id/novelty_recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listItem="@layout/novelty"
             />
 
-</FrameLayout>
+</RelativeLayout>
