--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="items_name_text_size">20sp</dimen>
     <dimen name="item_price_text_size">20sp</dimen>
     <dimen name="toolbar_height">32dp</dimen>
+    <dimen name="common_button_text">16sp</dimen>
 </resources>
