--- a/app/src/main/res/layout/novelty_fragment.xml
+++ b/app/src/main/res/layout/novelty_fragment.xml
@@ -10,34 +10,13 @@
             android:id="@+id/novelty_toolbar"
             />
 
-    <LinearLayout
+    <include
+            layout="@layout/error_layout"
             android:id="@+id/novelty_error_layout"
-            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_width="match_parent"
             android:layout_below="@id/novelty_toolbar"
-            android:orientation="vertical"
-            >
-
-        <TextView
-                android:layout_marginTop="@dimen/common_margin"
-                android:id="@+id/novelty_error"
-                android:text="@string/novelty_error_no_date"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                />
-
-        <TextView
-                android:id="@+id/novelty_error_refresh_btn"
-                android:layout_marginTop="@dimen/common_margin"
-                android:layout_gravity="center"
-                android:text="@string/refresh"
-                android:layout_width="96dp"
-                android:layout_height="40dp"
-                style="@style/common_button"
-                />
-
-    </LinearLayout>
+            />
 
     <androidx.recyclerview.widget.RecyclerView
             xmlns:tools="http://schemas.android.com/tools"
