--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout
-        android:id="@+id/main_base_view_group"
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/main_base_view_group"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         >
 
     <FrameLayout
@@ -14,7 +14,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             />
+    <fragment
+            android:id="@+id/nav_host_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
 
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/nav_graph" />
     <com.google.android.material.navigation.NavigationView
             android:id="@+id/main_navigation"
             android:layout_width="wrap_content"
