--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#C2113D</color>
-    <color name="colorPrimaryDark">#C2113D</color>
-    <color name="colorAccent">#D48B98</color>
+    <color name="colorPrimary">#4B0082</color>
+    <color name="colorPrimaryDark">#9400D3</color>
+    <color name="colorAccent">#E6E6FA</color>
     <color name="true_white">#ffffff</color>
 </resources>
