first successfull run

--- a/app/src/main/res/layout/catalog_fragment.xml
+++ b/app/src/main/res/layout/catalog_fragment.xml
@@ -8,21 +8,21 @@
 
     <include
             layout="@layout/small_toolbar"
-            android:id="@+id/catalog_toolbar"
+            android:id="@+id/wallet_toolbar"
             />
 
     <include
             layout="@layout/error_layout"
-            android:id="@+id/catalog_error_layout"
+            android:id="@+id/wallet_error_layout"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:layout_below="@id/catalog_toolbar"
+            android:layout_below="@id/wallet_toolbar"
             />
 
     <androidx.recyclerview.widget.RecyclerView
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/catalog_recycler"
-            android:layout_below="@id/catalog_toolbar"
+            android:layout_below="@id/wallet_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listItem="@layout/novelty"
